--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
 ### VisualStudioCode ###
-.vscode/*      # Maybe .vscode/**/* instead - see comments
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+**/.vscode/*      # Maybe .vscode/**/* instead - see comments
+**/.vscode/settings.json
+**/.vscode/tasks.json
+**/.vscode/launch.json
+**/.vscode/extensions.json
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
